--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,5 @@
 /*
-  Theme Name:  Ailng Creative Consulting & Business Agency HTML Template
+  Theme Name:  Stallions Digital | Digital Marketing & IT Services Consultancy
   Author: Themetum
   Description: Creative template.
   Version: 1.0
